# hospital-management-c-

./: .gitignore  Appointment.cpp  Appointment.h  CMakeLists.txt  Doctor.cpp  Doctor.h  Hospital.cpp  Hospital.h  HospitalManagementSystem.cpp  HospitalManagementSystem.h  Logger.cpp  Logger.h  Patient.cpp  Patient.h  main.cpp
